--- a/pollutionMore.html
+++ b/pollutionMore.html
@@ -12,7 +12,7 @@
     <div class = "col-sm-6">
       <center>
       <h2> congratulations, a pollution-ex is being delivered to the designated area! </h2>
-      <input type = "button" value = "return home" onclick = "window.location.href = 'low fidel app home.html'">
+      <input type = "button" value = "return home" onclick = "window.location.href = 'low fidel app home index.html'">
       </center>
     </div>
 
