--- a/about us.html
+++ b/about us.html
@@ -29,7 +29,7 @@
         <br>
       <h1> Solution Line-Up </h1>
       <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-        <input type = "button" value = "return home" onclick = "window.location.href = 'low fidel app home.html'">
+        <input type = "button" value = "return home" onclick = "window.location.href = 'low fidel app home index.html'">
       </center>
     </div>
 
